...
    static let errorDialogMessage = "Cannot access photos in your albums"
    static let wallpaperOptionsTitle = "Set Wallpaper"
    static let toggleTheme = "Toggle Theme"
    static let wallpaperOptionsPickAction = "Pick image from gallery"
    static let wallpaperOptionsNoWallpaperAction = "No wallpaper"
    static let dialogCancelAction = "Cancel"
    static let emailSent = "Email Sent"
    static let ok = "Ok"
    static let forgotPassword = "Forgot Password"
    static let reset = "Reset"
    static let enterEmailID = "Enter your Email ID"
    static let invalidEmail = "Invalid Email ID"
    static let errorOccured = "Some error occured"
    static let json = "json"
    static let send = "send"
    static let mic = "microphone"
    static let play = "play"
    static let timeZone = "-530"
    static let askSusi = "Ask Susi Something..."
    static let susiTitle = "    Susi"
    static let cellId = "cellId"
...
        static let deleteVModel = "Delete Voice Model"
        static let rateSusi = "Rate SUSI"
        static let rateSusiSubtitle = "Rate SUSI on the App Store"
        static let shareSusi = "Share SUSI"
        static let shareSusiSubtitle = "Share the SUSI App with your friends"
        static let resetPass = "Reset Password"
        static let logout = "Logout"
        static let login = "Login"
        static let chatSettings = "Chat Settings"
        static let micSettings = "Mic Settings"
        static let speechSettings = "Speech Settings"
        static let susiVoiceModel = "SUSI Voice Model"
        static let miscellaneous = "Miscellaneous"
        static let devices = "Devices"
...
    }

    struct Login {
        static let susiImage = "susi"
        static let emailAddress = "Email Address"
        static let invalidEmail = "Error, incorrect email"
        static let password = "Password"
        static let passwordLengthError = "Error, Should be at least 8 characters"
        static let login = "Login"
        static let forgotPassword = "Forgot Password?"
        static let signUpForSusi = "Sign Up for SUSI"
        static let skip = "Skip"
    }

    struct SignUp {
        static let emailAddress = "Email Address"
        static let invalidEmail = "Error, incorrect email"
        static let password = "Password"
        static let passwordError = "Password should be 6 characters long with one uppercase, lowercase and a number"
        static let confirmPassword = "Confirm Password"
        static let passwordDoNotMatch = "Passwords do not match"
        static let signUp = "Sign Up"
        static let successSignup = "You successfully signed-up! An email with a verification link was sent to your address."
        static let verificationLink = "Your request for a new verification link has been processed! An email with a verification link was sent to your address."
        static let errorMessage = "Already registered email! please provide a new email."
    }

    struct UserDefaultsKeys {
...
        static let room = "room"
        static let userQuery = "userQuery"
        static let bookmark = "bookmark"
    }

    struct TestKeys {
        static let email = "email"
        static let password = "password"
        static let send = "send"
        static let login = "login"
        static let signUp = "signUp"
        static let returnHit = "return"
        static let incorrectLogin = "Email ID / Password incorrect"
        static let emailDetail = "emailDetail"
        static let confirmPassword = "confirmPassword"
        static let forgotPassword = "forgotPassword"
        static let reset = "reset"
        static let emailSent = "Email Sent"
        static let ok = "Ok"
        static let skip = "Skip"
        static let chatInputView = "inputView"
        static let logout = "Logout"
        static let rssCollectionView = "rssCollectionView"
        static let chatCollectionView = "chatCollectionView"
        static let chatCells = "chatCell"
        static let settings = "settings"
        static let susiSymbol = "susi symbol"

        struct TestAccount {
            static let emailId = "susi.ai@mail.com"
            static let password = "Password123"
            static let incorrectPassword = "password"
            static let invalidEmail = "susi.ai@mail"
...
