...
        static let Chat = "/susi/chat.json"
        static let ResetPassword = "/aaa/recoverpassword.json"
    }

    struct ResponseMessages {
        static let InvalidParams = "Email ID / Password incorrect"
        static let ServerError = "Problem connecting to server!"
        static let SignedOut = "Successfully logged out"
    }

    struct UserKeys {
        static let AccessToken = "access_token"
        static let Message = "message"
...
